--- a/Memory_Game_Version_1.html
+++ b/Memory_Game_Version_1.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    </div>
     <!-- manually placing all the images... very boring and inneficient! -->
     <!-- you will change this implementation on the lab -->
     <h1> The Memory Game </h1>
@@ -17,6 +19,7 @@
 
 
     </div>
+    <div id="reset"></div>
 
     <h2>Number of Trials: </h2>
     <h2 id="numberOfTrials"></h2>
